--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
          <h5 class="text-primary">HOW CORONAVIRUSS IS SPREAD</h5>
          <h2 class="text-darka"> How Contagion(Treatment) Coronavirus</h2>
          <p class="text-muted"> </p>
-         <div class="row pt-5 ">
+         <div class="row pt-5 pl-5 ">
            <div class="col-lg-3  col-md-6 col-12 mb-5 ">
               <div class="card" style="width:200px">
        <div class="card-body ">
